--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.2",
+    "react-native-svg-transformer": "^1.0.0",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
